feat: add spring boot 3 support