@@ -5,8 +5,8 @@ import org.apache.ignite.IgniteCache;
 import org.example.model.RevokedCertificate;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestTemplate;
-import org.testcontainers.shaded.com.google.common.collect.Lists;
+//import org.springframework.web.client.RestTemplate;
+//import org.testcontainers.shaded.com.google.common.collect.Lists;
 
 import java.util.Arrays;
 import java.util.List;
@@ -17,18 +17,18 @@ import java.util.stream.Collectors;
 @Component
 public class CertificateTask {
     private final Ignite ignite;
-    private final RestTemplate restTemplate;
+//    private final RestTemplate restTemplate;
 
-    public CertificateTask(Ignite ignite, RestTemplate restTemplate) {
+    public CertificateTask(Ignite ignite/*, RestTemplate restTemplate*/) {
         this.ignite = ignite;
-        this.restTemplate = restTemplate;
+//        this.restTemplate = restTemplate;
     }
 
     public void loadRevokedCertificateificatesDistributed(RevokedCertificate[] certs) {
         IgniteCache<String, RevokedCertificate> cache = ignite.cache("revoked-certs");
 
         // Разбиваем массив на подзадачи по 1000 элементов
-        List<List<RevokedCertificate>> batches = Lists.partition(Arrays.asList(certs), 1000);
+        List<List<RevokedCertificate>> batches = List.of(List.of(certs));
 
         // Распространяем обработку по всем серверным узлам
         ignite.compute().broadcast(() -> {
@@ -49,10 +49,11 @@ public class CertificateTask {
 
     @Scheduled(fixedRate = 24 * 60 * 60 * 1000)
     public void scheduledLoad() {
-        RevokedCertificate[] certs = restTemplate.getForObject(
-                "https://government.example.com/api/revoked-certs",
-                RevokedCertificate[].class
-        );
+        RevokedCertificate[] certs = new RevokedCertificate[]{};
+//        restTemplate.getForObject(
+//                "https://government.example.com/api/revoked-certs",
+//                RevokedCertificate[].class
+//        );
 
         if (certs != null && certs.length > 0) {
             loadRevokedCertificateificatesDistributed(certs);
